# mpc

./: .gitignore  .gitmodules  CMakeLists.txt  CPPLINT.cfg  Doxyfile  README.md  mpc_config.yaml
cmake/: compile_acados.cmake  generate_acados_c_code.cmake
example/: run_example.py  simulation_config.yaml
example/utils/: plot_results.py  utils.py
examples/: CMakeLists.txt  integrator_example.cpp  integrator_example.py  run_example.cpp  run_example.py  simulation_config.yaml
examples/utils/: plot_results.py  utils.hpp  utils.py
include/acados_mpc/: acados_mpc.hpp  acados_mpc_datatype.hpp  acados_sim_solver.hpp
mpc/: __init__.py  export_c_code.py  mpc_controller.py  read_config.py
mpc/mpc_controller_lib/: acados_solver.py  drone_model.py
mpc/test/: test_code_style.py
mpc/test/mpc/: test_dynamics.py
src/: acados_mpc.cpp  acados_mpc_datatype.cpp  acados_sim_solver.cpp
tests/: CMakeLists.txt  acados_mpc_benchmark.cpp  acados_mpc_gtest.cpp  acados_mpc_test.cpp
